# langchain-c-course

./: .gitignore  README.md  pyproject.toml
src/1_chat_model/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  4_chat_model_basic_conversation_with_user.py  5_chat_model_save_message_history_firebas.py
src/2_prompt_templates/: 1_prompt_templates_basic.py
src/3_chain/: 1_chain_basic.py  2_chain_under_hood.py  3_chain_extended.py  4_chain_parallel.py
src/5_agent_deep_dive/: 1_agents_react_chat.py  1_agents_tools_basics.py  3_tool_base_tool.py
src/5_agent_deep_dive/A_tools_deep_dive/: 1_tools_basic.py
