[tool.poetry]
name = "langchain-c-course"
version = "0.1.0"
description = ""
authors = ["Mintu Kumar <imin2tu@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"  # <-- Correct placement
langchain = "^0.3.23"
huggingface-hub = "^0.30.2"
transformers = "^4.51.2"
torch = "^2.6.0"
python-dotenv = "^1.1.0"
langchain-community = "^0.3.21"
openai = "^1.73.0"
groq = "^0.22.0"
tavily-python = "^0.5.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"